# LiMR_cpp

./: CMakeLists.txt  README.md  README_ch.md
doc/: cmake.md  cmake_en.md  install.md  安装方法.md
include/: config.h  pipeline.h  utils.cuh  utils.h  video_thread.h
src/: config.cpp  main.cpp  pipeline.cpp  utils.cpp  utils.cu  video_thread.cpp
